--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 <body><!--  Čia talpinamas matomas turinys, kuris rodomas puslapyje. -->
    <div><!--  tai blokinis "konteineris", skirtas elementams grupuoti. -->
 
-    <h1>Robertas Stasiūnas</h1>
+    <h1><u>Robertas Stasiūnas</u></h1> <!-- <u> pabraukia tekstą. Tačiau tai gali būti klaidinantis formatavimo būdas, nes interneto naršyklėse pabrauktas tekstas dažnai atrodo kaip nuoroda. -->
 
     <p>Mano pirmas HTML dokumentas. Man patinka Nvidia kompanija. Nezinau ka daugiau rasyti lol.</p>
 
-    <p><a href="https://www.w3schools.com/html/" target="_blank" rel="noopener">W3Schools HTML Tutorial</a></p>
+    <a href="https://www.w3schools.com/html/" target="_blank" rel="noopener">W3Schools HTML Tutorial</a>
 
-    <p><img src="Paveikslai/job.jpg" alt="Mano svajonių darbo pozicija"></p>
+    <img src="Paveikslai/job.jpg" alt="Mano svajonių darbo pozicija">
    </div>
 
     <h2>Dominančios sritys</h2>
   <ol>
-    <li>Išmanieji tinklai (Smart Grid) ir tinklų automatika</li>
-    <li>Atsinaujinančios energetikos integracija į tinklą (saulė/vėjas)</li>
+    <li><strong>Išmanieji tinklai (Smart Grid) ir tinklų automatika</strong></li> <!-- <strong> – semantiškai paryškina kaip svarbią informaciją -->
+    <li><b>Atsinaujinančios energetikos integracija į tinklą (saulė/vėjas)</b></li><!-- <b> – tik vizualiai paryškina, bet nesuteikia svarbos prasmės -->
     <li>Galios elektronika ir keitikliai (inverteriai, DC/DC)</li>
   </ol>
 
   <h2>Ką noriu išmokti studijų metu</h2>
   <ul>
-    <li>SCADA/PLC programavimas (IEC 61131-3, TIA Portal)</li>
-    <li>Modeliavimas su MATLAB/Simulink</li>
+    <li><em>SCADA/PLC programavimas (IEC 61131-3, TIA Portal)></em></li><!-- <em> – semantiškai pažymi žodį kaip pabrėžtą (intonacija skaitytuvuose) -->
+    <li><i>Modeliavimas su MATLAB/Simulink</i></li><!-- <i> – tiesiog daro tekstą pasvirą vizualiai, be semantinės reikšmės -->
     <li>Python automatizavimui ir duomenų analizei</li>
 
 
