--- a/index.html
+++ b/index.html
@@ -458,10 +458,10 @@
               <div class="icon-wrapper">
                 <i class="bi bi-palette"></i>
               </div>
-              <h4>Brand Identity</h4>
-              <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus vivamus magna.</p>
+              <h4>HTML žinos</h4>
+              <p>Plačiau apie HTML</p>
               <a href="service-details.html" class="read-more">
-                <span>Explore</span>
+                <span>Paskaupk mane</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
             </div>
