--- a/service-details.html
+++ b/service-details.html
@@ -165,22 +165,31 @@
             <div class="service-overview" data-aos="fade-up" data-aos-delay="200">
               <div class="overview-header">
                 <span class="badge">Premium Service</span>
-                <h2>Professional Web Development That Drives Results</h2>
+                <h2>Plačiai apie HTML</h2>
               </div>
-              <p class="lead-text">Transform your digital presence with custom web solutions built to perform. I specialize in creating high-performance websites that combine stunning design with powerful functionality, delivering exceptional user experiences that convert visitors into customers.</p>
+              <p class="lead-text">Pilnai baigesi idėjos ngl</p>
             </div>
 
             <div class="service-image-showcase" data-aos="zoom-in" data-aos-delay="300">
-              <img src="assets/img/services/services-1.webp" alt="Web Development" class="img-fluid main-image">
-              <div class="image-overlay">
+              <video controls class="img-fluid main-video">
+                <source src="assets/media/7534244-hd_1920_1080_25fps.mp4" type="video/mp4">
+              </video>
+              
+
+              
+              <!-- <img src="assets/img/services/services-1.webp" alt="Web Development" class="img-fluid main-image"> -->
+              <!-- <div class="image-overlay">
                 <div class="tech-stack">
                   <span class="tech-item">React</span>
                   <span class="tech-item">Node.js</span>
                   <span class="tech-item">MongoDB</span>
                 </div>
-              </div>
+              </div> -->
             </div>
-
+            <iframe class="img-fluid main-video_1" src="https://www.youtube.com/embed/BoUVIhtqjAw" title="YouTube video player" frameborder="0" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <audio controls class="img-fluid main-video_2 mt-4">
+              <source src="assets/media/quartz-clock-ticking-one-minute-253102.mp3" type="audio/mpeg">
+            </audio>
             <div class="features-grid" data-aos="fade-up" data-aos-delay="400">
               <h3 class="section-heading">What You Get</h3>
               <div class="row g-4">
