--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Custom CSS File -->
+  <link href="assets/css/custom.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Craftivo
@@ -51,7 +53,7 @@
       </a>
 
       <nav id="navmenu" class="navmenu">
-        <ul>
+        <ul>  
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
@@ -148,16 +150,16 @@
 
               <div class="profile-stats">
                 <div class="stat-item">
-                  <h4>156</h4>
-                  <p>Projects</p>
+                  <h4>4</h4>
+                  <p>Projektai</p>
                 </div>
                 <div class="stat-item">
-                  <h4>8+</h4>
-                  <p>Years</p>
+                  <h4>2</h4>
+                  <p>Metai</p>
                 </div>
                 <div class="stat-item">
-                  <h4>42</h4>
-                  <p>Awards</p>
+                  <h4>2</h4>
+                  <p>Apdovanojimai</p>
                 </div>
               </div>
 
