--- a/index.html
+++ b/index.html
@@ -126,6 +126,57 @@
         </p>
       </div><!-- End Section Title -->
 
+      <!-- Extra listas -->
+<div class="centras">
+       <ul>
+  <li>
+    Šiluminės elektrinės
+    <ul>
+      <li>Kūrenamos anglimi</li>
+      <li>Kūrenamos gamtinėmis dujomis</li>
+      <li>Kūrenamos biokuru</li>
+    </ul>
+  </li>
+
+  <li>
+    Hidroelektrinės
+    <ul>
+      <li>Statomos ant upių</li>
+      <li>Naudoja vandens srauto energiją</li>
+      <li>Ekologiškesnės už šilumines</li>
+    </ul>
+  </li>
+
+  <li>
+    Atominės elektrinės
+    <ul>
+      <li>Naudoja branduolinę energiją</li>
+      <li>Gamina didelį energijos kiekį</li>
+      <li>Reikalauja griežtos saugos</li>
+    </ul>
+  </li>
+
+  <li>
+    Vėjo elektrinės
+    <ul>
+      <li>Paverčia vėjo energiją elektra</li>
+      <li>Statomos pakrantėse ir lygumose</li>
+      <li>Priklauso nuo vėjo stiprumo</li>
+    </ul>
+  </li>
+
+  <li>
+    Saulės elektrinės
+    <ul>
+      <li>Naudoja saulės šviesą</li>
+      <li>Montuojamos ant stogų ar žemėje</li>
+      <li>Efektyviausios saulėtu oru</li>
+    </ul>
+  </li>
+</ul>
+</div>
+      <!-- End Extra listas -->
+
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-5">
@@ -452,6 +503,36 @@
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
       </div><!-- End Section Title -->
 
+      <!-- lentele -->
+       <section id="services">
+        
+  <table class="services-table">
+    <tr>
+      <th>Paslauga</th>
+      <th>Aprašymas</th>
+      <th>Kaina</th>
+    </tr>
+
+    <tr>
+      <td>Tinklalapių programavimas</td>
+      <td>Asmeninių svetainių kūrimas</td>
+      <td>100 €</td>
+    </tr>
+
+    <tr>
+      <td>SEO optimizavimas</td>
+      <td>Svetainės pozicijų gerinimas</td>
+      <td>80 €</td>
+    </tr>
+
+    <tr>
+      <td>UI dizainas</td>
+      <td>Individualus dizaino kūrimas</td>
+      <td>120 €</td>
+    </tr>
+  </table>
+</section>
+  <!-- lenteles pabaiga -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
