--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
     <!-- About Section -->
     <section id="about" class="about section">
 
+      <!-- Animuoti trikampiai -->
+      <div class="triangle"></d iv>
+      <div class="triangle small"></div>
+
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <span class="subtitle">Apie mane</span>
